--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ bld/
 [Oo]bj/
 [Ll]og/
 
+# CI/CD Workflows for deferent environment
+.github/
+
 # Visual Studio 2015 cache/options directory
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
