--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
-      run: dotnet build --configuration Release --no-restore /p:DebugType=None
+      run: dotnet build --configuration Debug --no-restore /p:DebugType=None
     
     - name: Publish
       run: dotnet publish CICDPractical/CICDPractical.csproj -o PublishPracticalDev/CICDPractical/ -r win-x64 --self-contained false /p:DebugType=None
